[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/title-menu-background.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Perfect DOS VGA 437 Win.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/options-button.png" type="Texture" id=3]
[ext_resource path="res://Assets/play-button.png" type="Texture" id=4]
[ext_resource path="res://Assets/quit-button.png" type="Texture" id=5]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 2
outline_color = Color( 0.45098, 0.298039, 0.164706, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.596078, 0.439216, 0.215686, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -538.834
margin_right = 960.0
margin_bottom = 541.166
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 80
custom_constants/margin_left = 100
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 80.0
margin_right = 1252.0
margin_bottom = 700.0
custom_constants/separation = 300

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1152.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.768627, 0.396078, 0.0705882, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.0862745, 0.0352941, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "And Now You Dig!"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.5
margin_top = -50.0
margin_right = 225.5
margin_bottom = 149.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 39.0
margin_right = 411.0
margin_bottom = 299.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 372.0
margin_bottom = 83.0

[node name="PlayButton" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer"]
modulate = Color( 0.768627, 0.396078, 0.0705882, 1 )
margin_left = 80.0
margin_right = 292.0
margin_bottom = 83.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 372.0
margin_bottom = 194.0

[node name="OptionsButton" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer2"]
modulate = Color( 0.45098, 0.298039, 0.164706, 1 )
margin_right = 372.0
margin_bottom = 81.0
texture_normal = ExtResource( 3 )

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 372.0
margin_bottom = 299.0

[node name="QuitButton" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer3"]
modulate = Color( 0.45098, 0.298039, 0.164706, 1 )
margin_left = 80.0
margin_right = 292.0
margin_bottom = 75.0
texture_normal = ExtResource( 5 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer3/QuitButton" to="." method="_on_QuitButton_pressed"]
